vendor/fixed-macro/tests/compile-fail/literal-and-semi.rs
fn main() {
    fixed_macro::fixed!(123.45:);
}
